// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add experience 1`] = `
{
  "city": "Tehran",
  "country": "IR",
  "created_at": Any<String>,
  "description": "Test",
  "employment_type": "FULL_TIME",
  "end_at": null,
  "id": Any<String>,
  "job_category_id": Any<String>,
  "org_id": Any<String>,
  "skills": null,
  "start_at": Any<String>,
  "title": "Test",
  "user_id": Any<String>,
}
`;

exports[`add experience 2`] = `
{
  "city": "Tehran",
  "country": "IR",
  "created_at": Any<String>,
  "description": "Test",
  "employment_type": "FULL_TIME",
  "end_at": null,
  "id": Any<String>,
  "job_category_id": Any<String>,
  "org_id": Any<String>,
  "skills": null,
  "start_at": Any<String>,
  "title": "Test",
  "user_id": Any<String>,
}
`;

exports[`add language 1`] = `
{
  "created_at": Any<String>,
  "id": Any<String>,
  "level": "NATIVE",
  "name": "FA",
  "user_id": Any<String>,
}
`;

exports[`add language 2`] = `
{
  "created_at": Any<String>,
  "id": Any<String>,
  "level": "NATIVE",
  "name": "FA",
  "user_id": Any<String>,
}
`;

exports[`delete user 1`] = `
{
  "deleted_at": Any<Object>,
  "id": Any<String>,
  "reason": "TEST",
  "registered_at": Any<Object>,
  "user_id": Any<String>,
  "username": "test_username",
}
`;

exports[`login 1`] = `
{
  "error": ""email" must be a valid email",
}
`;

exports[`profile 1`] = `
{
  "address": null,
  "avatar": null,
  "bio": null,
  "certificates": null,
  "city": null,
  "country": null,
  "cover_image": null,
  "created_at": Any<String>,
  "educations": null,
  "experiences": [
    {
      "city": "Tehran",
      "country": "IR",
      "description": "Test",
      "employment_type": "FULL_TIME",
      "end_at": null,
      "id": Any<String>,
      "job_category": Any<Object>,
      "org": Any<Object>,
      "skills": null,
      "start_at": "2022-10-16T13:32:30.211",
      "title": "Test",
    },
  ],
  "first_name": "testname",
  "followers": 0,
  "followings": 2,
  "geoname_id": null,
  "id": Any<String>,
  "impact_points": 0,
  "languages": [
    {
      "id": Any<String>,
      "level": "NATIVE",
      "name": "FA",
    },
  ],
  "last_name": "lastname",
  "mission": null,
  "mobile_country_code": null,
  "open_to_volunteer": false,
  "open_to_work": false,
  "phone": null,
  "portfolios": null,
  "proofspace_connect_id": null,
  "recommendations": null,
  "reported": false,
  "skills": null,
  "social_causes": null,
  "username": "test_username",
  "wallet_address": null,
}
`;

exports[`profile 2`] = `
{
  "address": null,
  "avatar": null,
  "bio": null,
  "certificates": null,
  "city": null,
  "country": null,
  "cover_image": null,
  "created_at": Any<String>,
  "educations": null,
  "experiences": [
    {
      "city": "Tehran",
      "country": "IR",
      "description": "Test",
      "employment_type": "FULL_TIME",
      "end_at": null,
      "id": Any<String>,
      "job_category": Any<Object>,
      "org": Any<Object>,
      "skills": null,
      "start_at": "2022-10-16T13:32:30.211",
      "title": "Test",
    },
  ],
  "first_name": "testname",
  "followers": 0,
  "followings": 0,
  "geoname_id": null,
  "id": Any<String>,
  "impact_points": 0,
  "languages": [
    {
      "id": Any<String>,
      "level": "NATIVE",
      "name": "FA",
    },
  ],
  "last_name": "lastname",
  "mission": null,
  "mobile_country_code": null,
  "open_to_volunteer": false,
  "open_to_work": false,
  "phone": null,
  "portfolios": null,
  "proofspace_connect_id": null,
  "recommendations": null,
  "reported": false,
  "skills": null,
  "social_causes": null,
  "username": "test_username_2",
  "wallet_address": null,
}
`;

exports[`profile by username 1`] = `
{
  "address": null,
  "avatar": null,
  "bio": null,
  "certificates": null,
  "city": null,
  "country": null,
  "cover_image": null,
  "created_at": Any<String>,
  "educations": null,
  "experiences": [
    {
      "city": "Tehran",
      "country": "IR",
      "description": "Test",
      "employment_type": "FULL_TIME",
      "end_at": null,
      "id": Any<String>,
      "job_category": Any<Object>,
      "org": Any<Object>,
      "skills": null,
      "start_at": Any<String>,
      "title": "Test",
    },
  ],
  "first_name": "testname",
  "followers": 0,
  "followings": 2,
  "geoname_id": null,
  "id": Any<String>,
  "impact_points": 0,
  "languages": [
    {
      "id": Any<String>,
      "level": "PROFICIENT",
      "name": "EN",
    },
  ],
  "last_name": "lastname",
  "mission": null,
  "mobile_country_code": null,
  "open_to_volunteer": false,
  "open_to_work": false,
  "phone": null,
  "portfolios": null,
  "proofspace_connect_id": null,
  "recommendations": null,
  "reported": false,
  "skills": null,
  "social_causes": null,
  "username": "test_username",
  "wallet_address": null,
}
`;

exports[`profile by username 2`] = `
{
  "address": null,
  "avatar": null,
  "bio": null,
  "certificates": null,
  "city": null,
  "country": null,
  "cover_image": null,
  "created_at": Any<String>,
  "educations": null,
  "experiences": [
    {
      "city": "Tehran",
      "country": "IR",
      "description": "Test",
      "employment_type": "FULL_TIME",
      "end_at": null,
      "id": Any<String>,
      "job_category": Any<Object>,
      "org": Any<Object>,
      "skills": null,
      "start_at": Any<String>,
      "title": "Test",
    },
  ],
  "first_name": "testname",
  "followers": 0,
  "followings": 0,
  "geoname_id": null,
  "id": Any<String>,
  "impact_points": 0,
  "languages": [
    {
      "id": Any<String>,
      "level": "PROFICIENT",
      "name": "EN",
    },
  ],
  "last_name": "lastname",
  "mission": null,
  "mobile_country_code": null,
  "open_to_volunteer": false,
  "open_to_work": false,
  "phone": null,
  "portfolios": null,
  "proofspace_connect_id": null,
  "recommendations": null,
  "reported": false,
  "skills": null,
  "social_causes": null,
  "username": "test_username_2",
  "wallet_address": null,
}
`;

exports[`register 1`] = `
{
  "error": ""email" must be a valid email",
}
`;

exports[`update experience 1`] = `
{
  "city": "Tehran",
  "country": "IR",
  "created_at": Any<String>,
  "description": "Test",
  "employment_type": "FULL_TIME",
  "end_at": null,
  "id": Any<String>,
  "job_category_id": Any<String>,
  "org_id": Any<String>,
  "skills": null,
  "start_at": Any<String>,
  "title": "Test",
  "user_id": Any<String>,
}
`;

exports[`update experience 2`] = `
{
  "city": "Tehran",
  "country": "IR",
  "created_at": Any<String>,
  "description": "Test",
  "employment_type": "FULL_TIME",
  "end_at": null,
  "id": Any<String>,
  "job_category_id": Any<String>,
  "org_id": Any<String>,
  "skills": null,
  "start_at": Any<String>,
  "title": "Test",
  "user_id": Any<String>,
}
`;

exports[`update language 1`] = `
{
  "created_at": Any<String>,
  "id": Any<String>,
  "level": "PROFICIENT",
  "name": "EN",
  "user_id": Any<String>,
}
`;

exports[`update language 2`] = `
{
  "created_at": Any<String>,
  "id": Any<String>,
  "level": "PROFICIENT",
  "name": "EN",
  "user_id": Any<String>,
}
`;

exports[`update profile 1`] = `
{
  "address": null,
  "avatar": null,
  "bio": "TEST",
  "certificates": null,
  "city": null,
  "country": null,
  "cover_image": null,
  "created_at": Any<String>,
  "educations": null,
  "experiences": [
    {
      "city": "Tehran",
      "country": "IR",
      "description": "Test",
      "employment_type": "FULL_TIME",
      "end_at": null,
      "id": Any<String>,
      "job_category": Any<Object>,
      "org": Any<Object>,
      "skills": null,
      "start_at": "2022-10-16T13:32:30.211",
      "title": "Test",
    },
  ],
  "first_name": "testname",
  "followers": 0,
  "followings": 2,
  "geoname_id": null,
  "id": Any<String>,
  "impact_points": 0,
  "languages": [
    {
      "id": Any<String>,
      "level": "PROFICIENT",
      "name": "EN",
    },
  ],
  "last_name": "lastname",
  "mission": "TEST",
  "mobile_country_code": "+98",
  "open_to_volunteer": false,
  "open_to_work": false,
  "phone": "9999999999",
  "portfolios": null,
  "proofspace_connect_id": null,
  "recommendations": null,
  "reported": false,
  "skills": [],
  "social_causes": null,
  "username": "test_username",
  "wallet_address": null,
}
`;

exports[`update profile 2`] = `
{
  "error": "duplicate key value violates unique constraint "idx_phone_country_code"",
}
`;
